sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:8: error: not found: value positionGnome
    (plusPetit(positionGnome,positionGnome+1),positionGnome) match {
               ^AlgGnomeSort:8: error: not found: value positionGnome
    (plusPetit(positionGnome,positionGnome+1),positionGnome) match {
                             ^AlgGnomeSort:8: error: not found: value positionGnome
    (plusPetit(positionGnome,positionGnome+1),positionGnome) match {
                                              ^AlgGnomeSort:10: error: not found: value -
      case (true,getNombreValeurs()-1) => return
                                   ^AlgGnomeSort:10: error: not found: value getNombreValeurs
      case (true,getNombreValeurs()-1) => return
                 ^AlgGnomeSort:11: error: not found: value positionGnome
      case (true,_) => positionGnome = positionGnome + 1 
                       ^AlgGnomeSort:12: error: not found: value positionGnome
      case (false,0) => echange(positionGnome,positionGnome+1); positionGnome = positionGnome + 1;
                                ^AlgGnomeSort:12: error: not found: value positionGnome
      case (false,0) => echange(positionGnome,positionGnome+1); positionGnome = positionGnome + 1;
                                              ^AlgGnomeSort:12: error: not found: value positionGnome
      case (false,0) => echange(positionGnome,positionGnome+1); positionGnome = positionGnome + 1;
                                                                ^AlgGnomeSort:13: error: not found: value positionGnome
      case (false,_) => echange(positionGnome,positionGnome+1); positionGnome = positionGnome - 1;
                                ^AlgGnomeSort:13: error: not found: value positionGnome
      case (false,_) => echange(positionGnome,positionGnome+1); positionGnome = positionGnome - 1;
                                              ^AlgGnomeSort:13: error: not found: value positionGnome
      case (false,_) => echange(positionGnome,positionGnome+1); positionGnome = positionGnome - 1;
                                                                ^